syntax = "proto3";
package ru.bolodurin.bitask;

message AppRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message AppResponse {
  int32 serverValue = 1;
}

service AppService {
  rpc doTask(AppRequest) returns (stream AppResponse);
}